# fastmcp-github-oauth

./: .env.example  .gitignore  .goreleaser.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/chainguard/: semantic-release.sts.yaml
.github/workflows/: ci.yaml  release.yaml  release.yml  tag-release.yaml
src/fastmcp_github_oauth_example/: __init__.py  server.py
thoughts/shared/plans/: initialization-implementation-plan.md
thoughts/shared/plans/initialization-implementation-plan/: phase1_compaction.md  phase2_compaction.md
